--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Tomer Media</title>
+    <title>TomerMedia</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
@@ -76,7 +76,13 @@
                 <p class="intro-textcus">A <span class="cus-color-txt">MARKET-LEADING</span> APPROACH TO</p>
                 <p class="intro-text1">BUSINESS GROWTH.</p>
                 <div class="video-holder">
-                    <iframe id="ytplayer" class="cusiframe" type="text/html" width="640" height="320" src="https://www.youtube.com/embed/XQu8TTBmGhA?autoplay=1&loop=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+
+
+
+                    <iframe id="ytplayer" class="cusiframe" type="text/html" width="570" height="320" src="https://www.youtube.com/embed/181EAwlvvFw?autoplay=1&loop=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+
+
+                    <!--<iframe id="ytplayer" class="cusiframe" type="text/html" width="640" height="320" src="https://www.youtube.com/embed/XQu8TTBmGhA?autoplay=1&loop=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>-->
                 </div>
             </div>
             <!--container-->
@@ -275,7 +281,7 @@
                         <p>We understand that in order for true ROI to be attained, all facets of a business’ marketing must work together as one.</p>
                         <br>
                         <br>
-                        <p><a class="btn btn-default btn-lg button float btn-sample1" type="button">GET SRARTED NOW</a>
+                        <p><a href="contact.html" class="btn btn-default btn-lg button float btn-sample1" type="button">GET STARTED NOW</a>
                         </p>
                     </div>
                 </div>
@@ -399,7 +405,7 @@
                     </div>
                     <br>
                     <br>
-                    <p><a class="btn btn-default btn-lg button float btn-sample2" type="button">GET SRARTED NOW</a>
+                    <p><a href="contact.html" class="btn btn-default btn-lg button float btn-sample2" type="button">GET STARTED NOW</a>
                     </p>
 
                 </div>
@@ -421,7 +427,7 @@
                         <br>
                         <br>
                         <p>
-                            <button type="submit" class="btn btn-primary btn-lg btndisabled btn-sample button float">TALK TO US TODAY</button>
+                            <a href="contact.html" <button type="submit" class="btn btn-primary btn-lg btndisabled btn-sample button float">TALK TO US TODAY</button></a>
                         </p>
 
                     </div>
@@ -436,7 +442,7 @@
             <div id="footer">
                 <div class="row">
 
-                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="www.ceffectz.com">ceffectz.</a>
+                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank">ceffectz.</a>
                     </p>
 
                 </div>
