--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Tomer Media</title>
+    <title>Services - TomerMedia</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -98,7 +98,7 @@
                                     <h2>LEAD GENERATION</h2>
                                     <p>Increase your chances of generating more sales by bringing more extremely targeted leads through your door. Targeted leads are the fuel to your business success.</p>
                                     <p>We help small businesses just like yours generate fresh, highly-qualified leads ready to buy the products and services you have to offer. As experts in proven tactics like targeted advertising - we can get you qualified leads on-demand.</p>
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                                     </p>
                                     <p>We can help you choose the right words and a crystal clear message so you can attract your ideal customers and connect and engage with them in a meaningful way. We help you deliver the right messageto the right audience at the right time.</p>
 
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                                     <p class="s-section05btn">that you want your visitors to take is right at their fingertips. Trust us to deliver stunning web design guaranteed to get instant credibility.
                                     </p>
 
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
                             </div>
@@ -217,7 +217,7 @@
                                     <p>Email Marketing is an affordable and effective tool for businesses to utilize to stay in touch with their customers or prospects during the buying cycle.Creating a successful email marketing campaign requires more than just hitting the send button. We are experts at planning and customizing email campaigns to ensure your message gets noticed, gets opened and most importantly, gets results.</p>
                                     <p>With some of the most feature rich email marketing software in the industry we can track the success of each mailing and make adjustments as needed. Delivering and managing billions of email campaigns for our clients, count on us to increase the performance of your email marketing. We also help keep your subscriber lists in optimal condition so that you can sell to the right people every time.</p>
 
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
 
@@ -255,7 +255,7 @@
                                     <h2>TRAFFIC GENERATION</h2>
                                     <p>Using winning digital strategies, we help businesses get more highly-qualified leads to generate more sales.</p>
                                     <p>With a consistent flood of qualified prospects entering your sales funnel, you get the word out about your business quickly and effectively. Over 60 Million hits generated for our clients every single year.</p>
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
                             </div>
@@ -294,7 +294,7 @@
                                     <h2>WEBSITE CONVERSION TWEAK & SPLIT TEST</h2>
                                     <p>In order to ensure the continued success of your business, it is imperative that you partner with experts in website conversion tweaks and split tests to generate campaigns that perform stronger than ever before.</p>
                                     <p>Using aggressive and relentless split test campaigns and equipped with proven tactics, we raised our clients’ conversion rates by 100% - 1000%. We help you boostyour ROI by transforming your visitors into lifelong, loyal customers.</p>
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
 
@@ -335,7 +335,7 @@
                                     </p>
                                     <p class="s-section09btn">With a team of in-house experts, TomerMedia has all the experience and knowledge needed to improve the performance of your website and online presence. Combine that level of expertise with TomerMedia’s own portfolio of proprietary software, techniques and processes, and you have all the ingredients necessary for success today. Work with us one-on-one to shatter your glass ceiling and reach new heights faster than you ever thought possible.</p>
 
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
                                 <div class="col-lg-1"></div>
@@ -374,7 +374,7 @@
                                     <p>Get a leg up on your competition by getting in front of your audience with high-quality videos that are clean and professional. With extensive experience producing videos that range in budget, we can help you tap into the global marketplace with video.
                                     </p>
 
-                                    <p><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                                    <p><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                                     </p>
                                 </div>
                             </div>
@@ -430,7 +430,7 @@
             <div class="row">
                 <div class="s-section12-txt-left">
                     <div class="col-lg-12 centered cus-col-lg-10">
-                        <p class="p-custom-margin"><a class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                        <p class="p-custom-margin"><a href="contact.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                         </p>
                     </div>
                 </div>
@@ -443,7 +443,7 @@
             <div id="footer">
                 <div class="row">
 
-                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="www.ceffectz.com">ceffectz.</a>
+                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank">ceffectz.</a>
                     </p>
 
                 </div>
