--- a/contactnew.html
+++ b/contactnew.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Contact - TomerMedia</title>
+    <title>Tomer Media</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 
@@ -30,17 +32,16 @@
     <script src="assets/js/modernizr.custom.js"></script>
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+    <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header page-scroll">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/1logo.png" class="logo" alt="Circular Image">
-                </a>
-
+                    </button>
+                    <a class="navbar-brand" href="index.html">
+                    <img src="img/1logo.png" class="logo" alt="Circular Image"></a>
+                    
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -92,8 +93,8 @@
 
                             <div class="c-section03-txt-left">
                                 <div class="col-lg-12">
-
-                                    <ul class="process effect-2" id="process">
+                                    
+                                         <ul class="process effect-2" id="process">
                                         <li>
                                             <img class="img-responsive cus-img-margin-auto" src="img/contact/contact-us-img-01.png" align="">
                                         </li>
@@ -176,7 +177,7 @@
     </div>
 
     <div class="c-section03">
-        <section id="contactf" class="container content-section text-center">
+        <section id="" class="container content-section text-center">
             <div class="col-md-12 ">
                 <h3>YOUR BUSINESS SUCCESS </h3>
                 <h2>IS JUST THE CLICK OF A BUTTON AWAY</h2>
@@ -189,7 +190,7 @@
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="YOUR COMPANY" id="company" name="company">
+                                <input type="text" class="form-control" placeholder="YOUR COMPANY">
                             </div>
                         </div>
                     </div>
@@ -202,39 +203,39 @@
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="SKYPE" name="skype" id="skype">
+                                <input type="text" class="form-control" placeholder="SKYPE">
                             </div>
                         </div>
                     </div>
 
-                    <!-- <div class="row">
+                   <!-- <div class="row">
                         <div class="col-md-6 ">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="subject" name="subject" placeholder=" *SUBJECT">
                             </div>
                         </div>-->
-                    <div class="row">
+<div class="row">
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <select class="form-control" id="nsubject" name="nsubject">
-                                    <option value="">*SUBJECT</option>
-                                    <option value="1">LEAD GENERATION</option>
-                                    <option value="2">COPYWRITING</option>
-                                    <option value="3">WEB DESIGN</option>
-                                    <option value="4">EMAIL MARKETING & LIST MANAGEMENT</option>
-                                    <option value="5">TRAFFIC GENERATION</option>
-                                    <option value="6">WEBSITE CONVERSION TWEAK & SPLIT TEST</option>
-                                    <option value="7">CONSULTING</option>
-                                    <option value="8">VIDEO PRODUCTION</option>
-                                    <option value="9">DONE-FOR-YOU MARKETING</option>
+<select class="form-control" id="subject" name="subject">
+                    <option value="">*SUBJECT</option>
+                    <option value="1">LEAD GENERATION</option>
+                    <option value="2">COPYWRITING</option>
+                    <option value="3">WEB DESIGN</option>
+                    <option value="4">EMAIL MARKETING & LIST MANAGEMENT</option>
+                    <option value="5">TRAFFIC GENERATION</option>
+                    <option value="6">WEBSITE CONVERSION TWEAK & SPLIT TEST</option>
+                    <option value="7">CONSULTING</option>
+                    <option value="8">VIDEO PRODUCTION</option>
+                    <option value="9">DONE-FOR-YOU MARKETING</option>
 
-                                </select>
-                            </div>
+                </select>
+ </div>
                         </div>
 
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="PHONE" name="phone" id="phone">
+                                <input type="text" class="form-control" placeholder="PHONE">
                             </div>
                         </div>
                     </div>
@@ -259,7 +260,7 @@
             <div id="footer">
                 <div class="row">
 
-                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank">ceffectz.</a>
+                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank" >ceffectz.</a>
                     </p>
 
                 </div>
