--- a/index.html
+++ b/index.html
@@ -80,33 +80,69 @@
 
 
 
-                    <div onclick="thevid=document.getElementById('thevideo'); thevid.style.display='block'; this.style.display='none'">
-                        <img style="cursor: pointer;display: inline-block;" src="img/video-player.jpg" class="img-responsive" width="570" height="321" alt="" />
+                    <div id="thevideo">
+
+
+
+                        <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+                        <div id="player">
+
+                            <a href="#" onclick="playMe()">
+                                <img src="./img/video-player.jpg" width="570" class="cusiframe">
+                            </a>
+
+                        </div>
+
+                        <div class="cusiframe">
+
+                            <script>
+                                // 2. This code loads the IFrame Player API code asynchronously.
+                                var tag = document.createElement('script');
+                                tag.src = "https://www.youtube.com/iframe_api";
+                                var firstScriptTag = document.getElementsByTagName('script')[0];
+                                firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+                                 // 3. called after the API code downloads.
+                                var player;
+
+                                function onYouTubeIframeAPIReady() {
+                                    // don't need anything here
+                                }
+
+                                 // 4. The API will call this function when the video player is ready.
+                                function onPlayerReady(event) {
+                                    event.target.playVideo();
+                                }
+
+                                function playMe() {
+                                    if (window.YT) {
+                                        player = new YT.Player('player', {
+                                            height: '320',
+                                            width: '570',
+                                            videoId: '181EAwlvvFw',
+                                            playerVars: {
+                                                'autoplay': 0,
+                                                'controls': 0,
+                                                'rel': 0,
+                                                'showinfo': 0
+                                            },
+                                            events: {
+                                                'onReady': onPlayerReady
+                                            }
+                                        });
+                                    }
+                                }
+                            </script>
+
+                        </div>
+
                     </div>
-                    <div id="thevideo" style="display: none;">
 
-                        <object width="570" height="321">
-                            <param name="movie" value="//www.youtube.com/v/181EAwlvvFw?version=3&amp;hl=en_US&amp;autoplay=1&rel=0&showinfo=0" allowFullScreen="true" allowscriptaccess="always" allowfullscreen="true"></param>
-                            <param name="allowFullScreen" value="true"></param>
-                            <param name="allowscriptaccess" value="always"></param>
-                            <embed src="//www.youtube.com/v/181EAwlvvFw?version=3&amp;hl=en_US&amp;autoplay=1&rel=0&showinfo=0" allowFullScreen="true" allowscriptaccess="always" allowfullscreen="true" type="application/x-shockwave-flash" width="570" height="321"></embed>
-                        </object>
-
-                    </div>
-
-
-
-                    <!--2222-->
-
-                    <!--<iframe id="ytplayer" class="cusiframe"  type="text/html" width="570" height="320"
-src="https://www.youtube.com/embed/181EAwlvvFw?autoplay=1&loop=1&rel=0&showinfo=0"
-frameborder="0" allowfullscreen></iframe>-->
-
-
-                    <!--<iframe id="ytplayer" class="cusiframe" type="text/html" width="640" height="320" src="https://www.youtube.com/embed/XQu8TTBmGhA?autoplay=1&loop=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>-->
                 </div>
+
             </div>
             <!--container-->
+
         </div>
     </section>
     <div class="Section02">
