--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
                     <div id="thevideo">
 
-                        <div id="mplayer">
-                            <iframe id="ytplayer" type="text/html" width="320" height="180" src="https://www.youtube.com/embed/XQu8TTBmGhA?autoplay=1&rel=0&showinfo=0" frameborder="0" allowfullscreen>
+                        <div>
+                            <iframe id="ytplayer" type="text/html" width="320" height="180" id="mplayer" src="https://www.youtube.com/embed/XQu8TTBmGhA?autoplay=1&rel=0&showinfo=0" frameborder="0" allowfullscreen>
                             </iframe>
                         </div>
 
