--- a/index.html
+++ b/index.html
@@ -82,60 +82,10 @@
 
                     <div id="thevideo">
 
-                        <div>
-                            <iframe id="ytplayer" type="text/html" width="320" height="180" id="mplayer" src="https://www.youtube.com/embed/XQu8TTBmGhA?autoplay=1&rel=0&showinfo=0" frameborder="0" allowfullscreen>
-                            </iframe>
-                        </div>
+
+                        <iframe id="ytplayer" type="text/html" width="570" height="320.625" class="cusiframe" src="https://www.youtube.com/embed/181EAwlvvFw?rel=0&showinfo=0" frameborder="0" allowfullscreen>
 
 
-                        <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-                        <div id="player">
-
-                            <a href="#" onclick="playMe()">
-                                <img src="./img/video-player.jpg" width="570" id="imgdisable" class="cusiframe" />
-                            </a>
-
-                        </div>
-
-
-                        <script>
-                            // 2. This code loads the IFrame Player API code asynchronously.
-                            var tag = document.createElement('script');
-                            tag.src = "https://www.youtube.com/iframe_api";
-                            var firstScriptTag = document.getElementsByTagName('script')[0];
-                            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-                             // 3. called after the API code downloads.
-                            var player;
-
-                            function onYouTubeIframeAPIReady() {
-                                // don't need anything here
-                            }
-
-                             // 4. The API will call this function when the video player is ready.
-                            function onPlayerReady(event) {
-                                event.target.playVideo();
-                            }
-
-                            function playMe() {
-                                if (window.YT) {
-                                    player = new YT.Player('player', {
-                                        height: '320',
-                                        width: '570',
-                                        videoId: 'XQu8TTBmGhA',
-                                        playerVars: {
-                                            'autoplay': 1,
-                                            'controls': 0,
-                                            'rel': 0,
-                                            'showinfo': 0
-                                        },
-                                        events: {
-                                            'onReady': onPlayerReady
-                                        }
-                                    });
-                                }
-                            }
-                        </script>
 
                     </div>
 
