--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
                 <div class="s-section12-txt-left">
                     <div class="col-lg-12 centered cus-col-lg-10">
 
-                        <p class="p-custom-margin"><a href="contact.html#contactf" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
+                        <p class="p-custom-margin"><a href="contact.php#contactf" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">GET STARTED NOW</a>
                         </p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
             <div id="footer">
                 <div class="row">
 
-                     <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank" >ceffectz.</a>
+                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank">ceffectz.</a>
                     </p>
 
                 </div>
