--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+<title>Tomer Media</title>
+<!-- Bootstrap Core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- Fonts -->
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Tomer Media</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Fonts -->
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<!-- Custom Theme CSS -->
+<link href="css/custom.css" rel="stylesheet">
+<!-- Custom animation styles for this template -->
 
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <!-- Custom Theme CSS -->
-    <link href="css/custom.css" rel="stylesheet">
-    <!-- Custom animation styles for this template -->
-
-    <link href="assets/css/main.css" rel="stylesheet">
-    <script src="assets/js/modernizr.custom.js"></script>
-    <script src="assets/js/modernizr.custom.js"></script>
-    <link href="css/hover.css" rel="stylesheet" media="all">
+<link href="assets/css/main.css" rel="stylesheet">
+<script src="assets/js/modernizr.custom.js"></script>
+<script src="assets/js/modernizr.custom.js"></script>
+<link href="css/hover.css" rel="stylesheet" media="all">
 
 </head>
 
@@ -76,24 +72,14 @@
 
                 <p class="intro-textcus">A <span class="cus-color-txt">MARKET-LEADING</span> APPROACH TO</p>
                 <p class="intro-text1">BUSINESS GROWTH.</p>
-
-
                 <div class="video-holder">
 
-                    <div id="thevideo">
 
-
-                        <iframe id="ytplayer" type="text/html" width="570" height="320.625" class="cusiframe" src="https://www.youtube.com/embed/181EAwlvvFw?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-
-
-
-                    </div>
+                    <iframe id="ytplayer" type="text/html" width="570" height="320.625" class="cusiframe" src="https://www.youtube.com/embed/181EAwlvvFw?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 
                 </div>
-
             </div>
             <!--container-->
-
         </div>
     </section>
     <div class="Section02">
@@ -289,7 +275,7 @@
                         <p>We understand that in order for true ROI to be attained, all facets of a business’ marketing must work together as one.</p>
                         <br>
                         <br>
-                        <p><a href="contact.html#contactf" class="btn btn-default btn-lg button float btn-sample1" type="button">GET STARTED NOW</a>
+                        <p><a href="contact.php#contactf" class="btn btn-default btn-lg button float btn-sample1" type="button">GET STARTED NOW</a>
                         </p>
                     </div>
                 </div>
@@ -413,7 +399,7 @@
                     </div>
                     <br>
                     <br>
-                    <p><a href="contact.html#contactf" class="btn btn-default btn-lg button float btn-sample2" type="button">GET STARTED NOW</a>
+                    <p><a href="contact.php#contactf" class="btn btn-default btn-lg button float btn-sample2" type="button">GET STARTED NOW</a>
                     </p>
 
                 </div>
@@ -435,7 +421,7 @@
                         <br>
                         <br>
                         <p>
-                            <a href="contact.html#contactf" <button type="submit" class="btn btn-primary btn-lg btndisabled btn-sample button float">TALK TO US TODAY</button></a>
+                            <a href="contact.php#contactf" <button type="submit" class="btn btn-primary btn-lg btndisabled btn-sample button float">TALK TO US TODAY</button></a>
 
                             <!-- <a href="mypets.html#myfish">Read About My Fish</a>-->
                         </p>
