--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Contact - TomerMedia</title>
+    <title>Thank You for the Submission - TomerMedia</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 
@@ -96,7 +94,7 @@
 
                                    <h2 class="thankyou">Thank you for your submission!</p><br>
 
-                                      <p><a href="Home.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">BACK</a>
+                                      <p><a href="index.html" class="btn btn-default btn-lg s-cus-contact-btn  btn-sample3 button float" type="button">BACK</a>
 
 
                                 </div>
