--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +52,7 @@
                         <a href="service.html">Services </a>
                     </li>
                     <li class="page-scroll">
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.php">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -168,7 +167,7 @@
             <div id="footer">
                 <div class="row">
 
-                    <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank">ceffectz.</a>
+                     <p class="footer-p-style">© 2014 TomerMedia. All rights reserved. Designed by <a href="http://www.ceffectz.com" target="_blank" >ceffectz.</a>
                     </p>
 
                 </div>
