--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>Tomer Media</title>
-<!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- Fonts -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Tomer Media</title>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Fonts -->
 
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<!-- Custom Theme CSS -->
-<link href="css/custom.css" rel="stylesheet">
-<!-- Custom animation styles for this template -->
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <!-- Custom Theme CSS -->
+    <link href="css/custom.css" rel="stylesheet">
+    <!-- Custom animation styles for this template -->
 
-<link href="assets/css/main.css" rel="stylesheet">
-<script src="assets/js/modernizr.custom.js"></script>
-<script src="assets/js/modernizr.custom.js"></script>
-<link href="css/hover.css" rel="stylesheet" media="all">
+    <link href="assets/css/main.css" rel="stylesheet">
+    <script src="assets/js/modernizr.custom.js"></script>
+    <script src="assets/js/modernizr.custom.js"></script>
+    <link href="css/hover.css" rel="stylesheet" media="all">
 
 </head>
 
@@ -50,7 +53,7 @@
                         <!--<a href="#download">Services </a>-->
                     </li>
                     <li class="page-scroll">
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.php">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -75,8 +78,8 @@
                 <div class="video-holder">
 
 
-                    <iframe id="ytplayer" type="text/html" width="570" height="320.625" class="cusiframe" src="https://www.youtube.com/embed/181EAwlvvFw?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-
+<iframe id="ytplayer" type="text/html" width="570" height="320.625" class="cusiframe" src="https://www.youtube.com/embed/181EAwlvvFw?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+                   
                 </div>
             </div>
             <!--container-->
