--- a/contactnew.html
+++ b/contactnew.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Thank You - TomerMedia</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+    <title>Thank You - TomerMedia</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32 64x64" href="img/favicon/favicon64x64.png">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="img/favicon/favicon.svg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
