--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Tomer Media</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32 64x64" href="img/favicon/favicon64x64.png">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="img/favicon/favicon.svg">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
