--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Thank You for the Submission - TomerMedia</title>
     <title>Service - TomerMedia</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32 64x64" href="img/favicon/favicon64x64.png">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="img/favicon/favicon.svg">
+    <link rel="icon" type="image/png" sizes="128x128" href="img/favicon/favicon128x128.ico">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
